--- a/Blog Pessoal/pom.xml
+++ b/Blog Pessoal/pom.xml
@@ -19,13 +19,14 @@
 	</properties>
 
 	<dependencies>
-
+		<!-- Security -->
+		
 		<dependency>
 			<groupId>org.junit.vintage</groupId>
 			<artifactId>junit-vintage-engine</artifactId>
 			<scope>test</scope>
 		</dependency>
-
+		
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
